add Exception hinting device jar directory